--- a/05-etc.Rmd
+++ b/05-etc.Rmd
@@ -6,7 +6,7 @@ Fun for me is [reading books]. I love to [travel]. I type in [dvorak].
 I love designing websites like this one (built using [bookdown]), [my blog\'s theme]
 (built using [Hugo]), and the [JHU DRP website].
 
-I maintain several blogs and wikis:
+I maintain a few blogs:
 
 - [Personal blog]
 - [Blog about teaching]
