--- a/04-teaching-dossier.Rmd
+++ b/04-teaching-dossier.Rmd
@@ -9,19 +9,19 @@
   <figcaption>Too much sanity may be madness<br/> and maddest of all: to see life as it is, <br/> and not as it should be!</figcaption>
 </figure>
 
-I believe that my primary responsibility in any course is to teach students how to become good learners. 
+I believe that my primary responsibility is to teach students how to become good learners. 
 Learning is a skill and like other skills it can be acquired through deliberate practice.
 Once you become good at learning you can pick up any subject by yourself.
 
 However, we do not fully understand how we learn. 
 As such, I try to incorporate a variety of different techniques and methodologies in my classroom.
-I consider myself a coach and a facilitator and aim at providing a welcoming and supportive environment in my classes, and the rest is up to students.
+I consider myself a coach and a facilitator and aim at providing a welcoming and supportive environment in my classes, and the rest is up to the students.
 
 Learning is also a habit that can only be developed over time.
-It requires a lot of observation and introspection on the part of the both student and the teacher is not something that can be rushed.
+It requires a lot of observation and introspection on the part of both the student and the teacher and is not something that can be rushed.
 I practice a lot of patience and mindfulness in my teaching.
 
-I teach because it's fun.
+Finally, I teach because it's fun.
 I am constantly experimenting with my teaching and learning from my experiences.
 Every class is unique and presents its own set of goals and challenges. 
 Every class is like a puzzle that I am trying to solve. 
