--- a/content/Notes/Books/h2g2.md
+++ b/content/Notes/Books/h2g2.md
@@ -5,7 +5,7 @@ tags : ["douglas-adams", "science-fiction", "comedy"]
 type : "post"
 ---
 
-Rereading the five books in The Hitchhiker's Guide trilogy is probably the most self-care I’ve done all lockdown. 
+Rereading the five books in The Hitchhiker's Guide trilogy is the best self-care I’ve done throughout the pandemic. 
 
 I would have loved to meet Douglas Adams, what a great guy he must have been to be friends with! 
 It's hard for me to imagine the kind of personality and world view one would have to have to create such an imaginative and fascinating adventure story. 
@@ -15,11 +15,11 @@ Basically, nobody gives much of a shit about anything. Everyone just wants to ch
 
 The books teeter on the edge of nihilism. The events in the books are pretty dark and grim. Marvin, for example, is forgotten and abandoned for several iterations of the universe, the earth is destroyed in the first chapter, god's message is "we apologise for the inconvenience", the only aim of the immortal Wowbagger is to curse every single living creature in the universe, the creator of the universe is senile, and on and on. 
 
-Adams manages to convert this darkness, using the magic of his words, in the purest of comedies. 
-Perhaps, it is because the stories are so dark that in his hands they become such pure joy. 
+Adams manages to convert this darkness, using the magic of his words, into the purest of comedies. 
+Perhaps, it is *because* the stories are so dark that in his hands they become such pure joy. 
 Through extreme exaggeration, he exposes the meaninglessness of life and yet finds humor in it.
 He's a prophet teaching us to laugh at the pointlessness of our ephemeral existence.
 His words really help puts things in perspective. 
 He is the incarnation of the total perspective vortex, but one that you're supposed to laugh at.
 
-I read the first four books in a paper form and the last book on my Kindle. This is the first time I noticed a stark difference between the two forms. I loved the paper version because it felt like having a constant companion with an amazing sense of humor. Just looking at the book made me happy. The physical act of opening it was like entering the Wardrobe. I remember being greatly influenced by these books the first time I read them and cannot help but think that they've helped shape my understanding of the world around me. And I'm happy to say that they've influenced me greatly yet again in these dark times. Not much point worrying about a global pandemic when your planet might be on schedule to be demolished for making an interstellar highway. Or worse, you might accidentally run into some poetry.
+I read the first four books in a paper form and the last book on my Kindle. This is the first time I noticed a stark difference between the two forms. I loved the paper version because it felt like having a constant companion with an amazing sense of humor. Just looking at the book made me happy. The physical act of opening it was like entering the Wardrobe. I remember being greatly influenced by these books the first time I read them and cannot help but think that they've helped shape my understanding of the world around me. And I'm happy to say that they've influenced me greatly yet again in these dark times. Not much point worrying about a global pandemic when your planet might be on schedule to be demolished for making way for an interstellar highway. Or worse, you might accidentally run into some poetry.
