--- a/content/Notes/Books/h2g2.md
+++ b/content/Notes/Books/h2g2.md
@@ -5,6 +5,17 @@ tags : ["douglas-adams", "science-fiction", "comedy"]
 type : "post"
 ---
 
+<figure class="medium right">
+<a href="https://en.wikipedia.org/wiki/The_Hitchhiker%27s_Guide_to_the_Galaxy">
+<img src="https://upload.wikimedia.org/wikipedia/en/b/bd/H2G2_UK_front_cover.jpg">
+</a></figure>
+
+<blockquote>
+<i>"The ships hung in the sky in much the same way that bricks don't."</i> 	
+</blockquote>
+
+
+
 Rereading the five books in The Hitchhiker's Guide trilogy is the best self-care I’ve done throughout the pandemic. 
 
 I would have loved to meet Douglas Adams, what a great guy he must have been to be friends with! 
@@ -23,3 +34,5 @@ His words really help puts things in perspective.
 He is the incarnation of the total perspective vortex, but one that you're supposed to laugh at.
 
 I read the first four books in a paper form and the last book on my Kindle. This is the first time I noticed a stark difference between the two forms. I loved the paper version because it felt like having a constant companion with an amazing sense of humor. Just looking at the book made me happy. The physical act of opening it was like entering the Wardrobe. I remember being greatly influenced by these books the first time I read them and cannot help but think that they've helped shape my understanding of the world around me. And I'm happy to say that they've influenced me greatly yet again in these dark times. Not much point worrying about a global pandemic when your planet might be on schedule to be demolished for making way for an interstellar highway. Or worse, you might accidentally run into some poetry.
+
+**Don't Panic.**
