--- a/index.Rmd
+++ b/index.Rmd
@@ -2,8 +2,8 @@
 title: "Apurva Nakade"
 author: "email: <span onMouseOver=\"this.innerHTML='alastname@uwo.ca'\"
                 onMouseOut=\"this.innerHTML='(left as an exercise to the reader)'\">(left as an exercise to the
-                reader)</span> <br /> 
-                Résumé: [CV], [Research Statement (video)], [Teaching Portfolio] "
+                reader)</span>, [CV] <br />" 
+                # Résumé: [CV], [Research Statement (video)], [Teaching Portfolio] 
 output: bookdown::gitbook
 github-repo: apurvanakade/apurvanakade.github.io
 description: "Personal Website."
@@ -16,8 +16,6 @@ favicon: "images/sisyphus.svg"
 
 <img src="images/me0.jpg" width="200px" class="left" />
 
-<p>&nbsp;</p>
-
 I\'m a postdoc at the [University of Western Ontario] working with [Dan Christensen] and [Chris Kapulkin]. 
 My research is in the areas of algebraic topology and homotopy theory.
 
@@ -25,12 +23,13 @@ In addition to research, I am very passionate about improving math education. I 
 modernize university math education and bring it to the 21st century through the use of new technological innovations 
 in teaching and in the process make it more accessible and equitable.
 
+I'm currently teaching [Algebraic Topology](https://owl.uwo.ca/portal/site/1fda099f-409e-45c6-ba83-c81bf40a4798).
 
 
   [University of Western Ontario]: http://www.math.uwo.ca/ 
   [Dan Christensen]: https://jdc.math.uwo.ca/ 
   [Chris Kapulkin]: http://www.math.uwo.ca/faculty/kapulkin/
-  [CV]: https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view?usp=sharing
+  [CV]: https://drive.google.com/file/d/1btfqsqUae_ixeT-If2lqVYPeEKHi8gb4/view?usp=sharing
   [Research Statement (video)]: https://youtu.be/rlyzT1PWw5I
   [DRP]: https://www.math.uwo.ca/undergraduate/directed_reading_program.html 
   [Teaching Portfolio]: teaching-portfolio/
