external css for ox-publish

--- a/index.org
+++ b/index.org
@@ -12,7 +12,8 @@
 #+html_doctype: xhtml-strict
 #+html_container: div
 #+description:
-#+html_head:
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/org.css"/>
+#+INFOJS_OPT: view:info toc:nil
 
 * Hi!
 :PROPERTIES:
@@ -20,12 +21,9 @@
 :END:
 
 
-*Contact info* : [[https://www.uwo.ca/math/people/postdocs.html][Here]]
-*Résumé*:
-[[https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing][CV]]
-(Updated on: December 24, 2020) *Currently teaching* :
-[[https://owl.uwo.ca/portal/site/1fda099f-409e-45c6-ba83-c81bf40a4798][Algebraic
-Topology]]
+#+attr_html: :alt  :align left :class img
+[[file:images/me0.jpg]]
+
 
 I'm a postdoc at the [[http://www.math.uwo.ca/][University of Western
 Ontario]] working with [[https://jdc.math.uwo.ca/][Dan Christensen]] and
@@ -35,5 +33,160 @@ I like math, teaching, coding, and lots of other things.
 
 something in here.
 let's try link here:[[*Discrete math]]
-** what about now?
+| *Quick Links:* | [[https://drive.google.com/file/d/1gjjdAYYkMuSBC6xEMi96PKej3IxA25VC/view?usp=sharing][Resume]] | [[https://www.uwo.ca/math/people/postdocs.html][Contact]] | [[https://owl.uwo.ca/portal/site/1fda099f-409e-45c6-ba83-c81bf40a4798][Algebraic Topology]] |
 * Discrete math
+* Projects
+  :PROPERTIES:
+  :CUSTOM_ID: projects
+  :END:
+[[https://drive.google.com/file/d/1iQ_-iqu1x4ueYT4ucNbb_WgAeaf19Ysc/view?usp=sharing][]]
+
+** Teaching Projects
+   :PROPERTIES:
+   :CUSTOM_ID: teaching-projects
+   :END:
+
+** Directed Reading Program
+
+  The Directed Reading Program is a program for undergrads and grad
+  students/postdocs. Undergrads are paired with a mentor whose interests
+  align with theirs and they study a topic of their choice for one
+  semester. It is intended to help motivated students explore topics in
+  more depth than possible in a classroom setting. I co-organize the
+  [DRP at UWO] and in the past have co-organized the [DRP at JHU].
+  Following is the list of projects I've mentored.
+
+  - Jacob Fabe, /Fundamental Group/ from Topology by Munkres ([DRP, Fall
+    2020])
+  - Tim Yau, /An Introduction to Manifolds/ by Loring Tu. ([DRP, Fall
+    2019][DRP, Fall 2020])
+  - Hannah Wool, /Topology/ by Munkres. ([DRP, Spring 2019])
+  - Sydney Timmerman, [/Differential Geometry and Lie Groups for
+    Physicists/] by Marián Fecko. ([DRP, Fall 2018])
+  - Eric Cochran, /An Introduction to Manifolds/ by Loring Tu. ([DRP,
+    Spring 2018])
+  - Chris Chia, /The Knot Book/ by Adams Collins. ([DRP, Fall 2017])
+
+** Discrete math course - Fall 2020
+
+  Most of my time in Fall 2020 was spent designing and teaching an
+  online Discrete Math course. This involved making [youtube videos],
+  making and editing [WeBWorK] problem sets, managing discussion forums,
+  other standard course related chores, and not going insane. I
+  occasionally write about it on my [my wordpress blog].
+
+** Canada/USA Mathcamp
+
+  Canada/USA Mathcamp is a summer camp for mathematically talented
+  students ages 13‑18 from all over the world. Among other things, I
+  have been designing and teaching some fun courses there. Notes for my
+  courses can be found notes. I've also supervised the
+  following reading projects:
+
+  - Daniel Koizumi,
+    [[https://drive.google.com/file/d/1bv-dCvd4nwfD68RxDeuDFoJ3dZIOoqPq/view][Riemann
+    Surfaces]] from /Algebraic Curves and Riemann Surfaces/ by Rick
+    Miranda.
+  - Kenji, Dedekind Domains in Lean and Michael, Konigsberg Bridge
+    Problem in Lean ([code]).
+  - Ezra Erives, /Differential Geometry and Lie Groups for Physicists/
+    by Marián Fecko.
+  - Edgar Wang, /Algebraic Topology/ and Alan Yan, /Algebraic Topology/
+    by Hatcher.
+
+** JHU Intersession courses
+
+  I taught two week-long intersession courses titled Hitchhiker's Guide
+  to Algebraic Topology and Symmetries & Polynomials. I taught both of
+  these courses in a flipped classroom format. I assigned students
+  guided exercises, which they solved to learn more about the subject.
+
+  - /Hitchhiker's Guide to Algebraic Topology/
+
+    For Hitchhiker's Guide to Algebraic Topology, I asked the students
+    to read and present applications of algebraic topology to other
+    fields of science of their choosing. We had several exciting
+    conversations about things like applications of knot theory to
+    protein folding and data science. The notes and the student
+    presentations can be found
+    [[https://apurvanakade.github.io/courses/2017_h2g2_alg_top/index.html][here]].
+
+  - /Symmetries & Polynomials/
+
+    In the Symmetries & Polynomials course, I taught group theory using
+    permutations of elements and its connection to Galois theory using
+    roots of polynomials. The problem sets for this course can be found
+    [[https://apurvanakade.github.io/teaching-portfolio/drive.google.com/file/d/1dChuk8J7s31C8xGurzsbf988VORnyXgb/view][here]].
+
+** Honors Single Variable Calculus
+
+  At JHU, I designed and taught a full semester Honors Single Variable
+  Calculus course for two semesters. This was an experimental full
+  semester four-credit course offered at JHU to first-year
+  undergraduates. The course covered all of the first-year calculus and
+  introduced students to proof writing. This is the first course I had
+  to design from scratch. The materials for this course can be found
+  [[https://apurvanakade.github.io/courses/2018_Honors_Calc/][here]].
+
+** Research Projects
+   :PROPERTIES:
+   :CUSTOM_ID: research-projects
+   :END:
+I work in the area of algebraic topology and homotopy theory. My broad
+interests are in understanding how homotopy theoretic tools can be used
+to solve problems from other areas of math.
+
+- *Proof Formalization*
+
+  I have recently gotten interesting in teaching math to computers using
+  [[https://leanprover.github.io/about/][Lean]]. This is different from
+  doing computations as here we are trying to teach math to computers
+  the same way we understand it.
+  [[file:courses/lean_at_MC2020/index.html][]] I taught a course about
+  it at [Mathcamp 2020].
+
+  My primary interest in Lean is as a potential tool for teaching math
+  proofs. My secondary interest lies in combining machine learning and
+  theorem proving. These are very long term goals as the field of
+  theorem proving, although rapidly growing, is still very nascent.
+- *2-groups in Equivariant Elliptic Cohomology*
+
+  I got involved in this project thanks to an
+  [[http://www.ams.org/programs/research-communities/2019MRC-Geometry][MRC
+  Workshop]]. 2-groups are higher categorical variants of groups. The
+  goal of this project is to find a 2-categorical interpretation of some
+  of naturally occurring objects (Drinfield double of a group) in
+  mathematical physics and extend them using ideas from Equivariant
+  Elliptic Cohomology.
+
+- *2-groups in HoTT*
+
+  I'm trying to understand how to express and analyze 2-groups in
+  homotopy type theory. Homotopy type theory is a branch of logic that
+  encored homotopy equivalences into one of its fundamental axioms
+  thereby providing a natural formalism for describing homotopy theory.
+
+- *An application of the h-principle to Manifold Calculus*
+
+  This was my PhD thesis, in which I applied homotopy theoretic
+  techniques to study problems for differential geometry. Here is
+  [[https://doi.org/10.1007/s40062-020-00255-3][the paper]]
+  ([[https://arxiv.org/abs/1711.07670][arXiv version]]) based on the
+  [[https://drive.google.com/file/d/1fHkImG-CTB2liHDIAo3YmzqBmN-Qibx6/view?usp=sharing][thesis]]
+  (Updated on: May 07, 2019). Here are some notes
+  [[https://drive.google.com/file/d/1h8pHb-5HmM55_bwdzPYDB7cVHo4MHy-I/view?usp=sharing][notes1]],
+  [[https://drive.google.com/file/d/1D8TSRQFVUVjM3wQ74npbH2hibrHsDho_/view?usp=sharing][notes2]]
+  from the talks I gave on this topic.
+
+- *Protein folding using Markov chains*
+
+  During my undergrad, I briefly worked on a project involving some
+  protein folding models using basic linear algebra.
+  [[https://drive.google.com/file/d/1xT6C4O_fMvpqoJCfnSq1ypeikM6XNMjw/view?usp=sharing][Information
+  Processing Letters, IPL4801]].
+
+- *Projects that did not quite work out*
+
+  - Spectral lifts of Soergel bimodules, joint with V. Lorman
+  - Finding loop space structures in exotic Kac-Moody groups
+  - Equivariant Embedding Calculus
